# hawc_hal

./: .codeclimate.yml  .gitignore  .travis.yml  LICENSE  README.md  codecov.yml  pyproject.toml  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  data-analysis-question.md
.github/workflows/: build_and_test.yml  issues.yml
ci/: environment.yml  install_miniconda.sh  install_package.sh
hawc-data-reader/: HAWCpyLike.py  Untitled.ipynb  convolved_source.py  map_tree.py  psf.py  psf_fast.py  region_of_interest.py  response.py  sparse_healpix.py  special_values.py  test_like.ipynb
hawc-response-reader/: map_tree.py  response.py
hawc_data_reader/: HAWCpyLike.py  TS map example.ipynb  convolved_source.py  fast_convolution.py  flat_sky_projection.py  map_tree.py  partial_image_to_healpix.py  psf_fast.py  region_of_interest.py  response.py  sparse_healpix.py  test_like.ipynb  tf1_wrapper.py  ts_map.py  util.py
hawc_hal/: HAL.py  __init__.py  convolved_source.py  dec_band_select.py  dec_band_selectcopy  flat_sky_projection.py  log_likelihood.py  map_tree.py  psf_fast.py  region_of_interest.py  response.py  root_handler.py  serialize.py  special_values.py  sphere_dist.py  ts_map.py  util.py
hawc_hal/convenience_functions/: fit_point_source.py
hawc_hal/convolved_source/: __init__.py  convolved_extended_source.py  convolved_point_source.py  convolved_source_container.py
hawc_hal/healpix_handling/: __init__.py  flat_sky_to_healpix.py  gnomonic_projection.py  healpix_utils.py  partial_image_to_healpix.py  sparse_healpix.py
hawc_hal/interpolation/: __init__.py  fast_bilinar_interpolation.py  fast_linear_interpolator.py  irregular_grid.py  log_log_interpolation.py
hawc_hal/maptree/: __init__.py  data_analysis_bin.py  from_hdf5_file.py  from_root_file.py  map_tree.py
hawc_hal/obsolete/: fast_convolution.py  image_to_healpix.py  tf1_wrapper.py  ts_map.py
hawc_hal/psf_fast/: __init__.py  psf_convolutor.py  psf_interpolator.py  psf_wrapper.py  sphere_dist.py
hawc_hal/region_of_interest/: __init__.py  healpix_cone_roi.py  healpix_map_roi.py  healpix_roi_base.py
hawc_hal/response/: __init__.py  response.py  response_bin.py
hawc_hal/tests/: conf_test.py  conftest.py  output.txt  test_bilinar_interpolation.py  test_complete_analysis.py  test_copy.py  test_declination_bin_selection.py  test_geminga_paper.py  test_healpixRoi.py  test_maptree.py  test_model_residual_maps.py  test_n_transits.py  test_on_point_source.py  test_plugin_creation.py  test_psf.py  test_radial_profiles.py  test_roi.py  test_root_to_hdf.py  test_serialization.py
hawc_hal/tests/data/: geminga_response.root  test_model.hdf5  test_residual.hdf5
notebooks/: test_like.ipynb
scripts/: hal_fit_point_source.py  hal_hdf5_to_fits.py
tests/: conftest.py  test_bilinar_interpolation.py  test_complete_analysis.py  test_copy.py  test_geminga_paper.py  test_maptree.py  test_model_residual_maps.py  test_n_transits.py  test_on_point_source.py  test_psf.py  test_roi.py  test_root_to_hdf.py  test_serialization.py
