[project]
name = "hawc_hal"
version = "1.1"
description = "HAWC Accelerated Likelihood; Read and handle HAWC data"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Giacomo Vianello", email = "giacomov@stanford.edu" }]
maintainers = [
  { name = "Xiaojie Wang", email = "xwang32@mtu.edu" },
  { name = "Ramiro Torres-Escobedo", email = "rtorrese@proton.me" },
]
dependencies = [
  "astromodels",
  "astropy",
  "awkward",
  "healpy",
  "hist",
  "matplotlib",
  "mplhep",
  "numba",
  "numpy>=1.14",
  "pandas",
  "reproject",
  "scipy",
  "six",
  "threeml",
  "tqdm",
  "uproot",
]

[project.urls]
"Bug Tracker" = "https://github.com/threeML/hawc_hal/issues"
Documentation = "https://threeml.readthedocs.io/en/stable/notebooks/hal_example.html"
Homepage = "https://threeml.readthedocs.io/en/stable/index.html"
Repository = "https://github.com/threeML/hawc_hal"

[project.scripts]
halfitpointsrc = "scripts.hal_fit_point_source:main"
hdf5tofits = "scripts.hal_hdf5_to_fits:main"

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hawc_hal", "scripts"]

[tool.ruff]
include = [
  "pyproject.toml",
  "hawc_hal/**/*.py",
  "scripts/**/*.py",
  "notebooks/**/*.ipynb",
]
exclude = [
  "codecov.yml",
  "data/*",
  "ci/*",
  "notebooks",
  "tests",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
