[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hawc_hal"
version = "1.1"
authors = [{ name = "Giacomo Vianello", email = "giacomov@stanford.edu" }]
maintainers = [
  { name = "Xiaojie Wang", email = "xwang32@mtu.edu" },
  { name = "Ramiro Torres-Escobedo", email = "rtorrese@proton.me" },
]
readme = "README.md"
description = "HAWC Accelerated Likelihood; Read and handle HAWC data"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.14",
  "healpy",
  "threeml",
  "astromodels",
  "pandas",
  "pytest",
  "six",
  "astropy",
  "scipy",
  "matplotlib",
  "numba",
  "reproject",
  "tqdm",
  "uproot",
  "awkward",
  "mplhep",
  "hist",
]
[project.urls]
homepage = "https://threeml.readthedocs.io/en/stable/index.html"
repository = "https://github.com/threeML/hawc_hal"
documentation = "https://threeml.readthedocs.io/en/stable/notebooks/hal_example.html"
"Bug Tracker" = "https://github.com/threeML/hawc_hal/issues"

[project.optional-dependencies]
dev = ["ruff", "basedpyright", "ty"]

[project.scripts]
hdf5tofits = "scripts.hal_hdf5_to_fits:main"
halfitpointsrc = "scripts.hal_fit_point_source:main"

[tool.setuptools.package-dir]
hawc_hal = "hawc_hal"
scripts = "scripts"
